get goods by code
